--- a/src/python/sandbox.ipynb
+++ b/src/python/sandbox.ipynb
@@ -2,27 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "show\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"show\")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np"
+   ]
   }
  ],
  "metadata": {
