--- a/docs/source/_jupyter/content/runner.ipynb
+++ b/docs/source/_jupyter/content/runner.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "print(\"This notebook is from local `content` folder\")"
    ]
   }
  ],
@@ -17,15 +17,7 @@
    "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
    "version": "3.12.6"
   }
  },
